--- a/Front-And-Integrador/src/Pages/Agenda/Agenda.css
+++ b/Front-And-Integrador/src/Pages/Agenda/Agenda.css
@@ -71,45 +71,29 @@
 
 .dropbtn {
   background-color: transparent;
-  color: white;
-  padding: 12px;
-
-  border: none;
+ 
+  padding: 8px;
+  margin-top: 0.3rem;
+ border-radius: 25rem;
+  border: 1px solid #ed8c1a;
   cursor: pointer;
+  margin-left: -2rem;
+  
+}
+.dropbtn a .fa-sign-out {
+ position: absolute;
+  color: #ed8c1a;
+  margin: -0.7rem 5rem 0 -0.5rem;
+  font-size: 1.5rem;
+  
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
-}
-.dropdown-content .fa-sign-out {
   position: absolute;
-  color: red;
-  margin: 0.1rem 1rem 0 1rem;
-  font-size: 1rem;
+  
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.7);
-  min-width: 60px;
-  right: 0;
-  z-index: 1;
-}
 
-.dropdown-content a {
-  color: #fff;
-  font-size: 1rem;
-  text-decoration: none;
-  display: block;
-  margin-right: 2rem;
-  padding-left: 1rem;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 
 /*/////////AGENDAMENT////////////*/
 
@@ -128,7 +112,7 @@
 .retorno-list {
   position: absolute;
   width: 75vw;
-  height: 89.5vh;
+  height: 89vh;
   background-color: rgba(0, 0, 0, 0.6);
   margin-right: 26.5rem;
   padding-left: 10rem;
@@ -139,7 +123,7 @@
 }
 .retorno-list ul li {
   width: 18.5vw;
-  height: 20vh;
+  height: 17vh;
   background-color: #ed8c1a;
   margin-top: 1rem;
   margin-left:-3rem ;
@@ -155,10 +139,10 @@
   justify-content: center;
   align-items: center;
   width: 31vw;
-  height: 90.3vh;
+  height: 90.2vh;
   border: none;
   background-color: rgba(0, 0, 0, 0.6);
-  margin-top: 3.8rem;
+  margin-top: 3.6rem;
   margin-right: 0.1rem;
 }
 
